--- a/slides/001-review/_012-notation.qmd
+++ b/slides/001-review/_012-notation.qmd
@@ -7,7 +7,8 @@ name: math-review
 
 ## Notation
 
-Data on a variable $X$ are a sequence of $n$ observations, indexed by $i$: $$\{x_i: 1, \dots, n \}.$$
+Data on a variable $X$ are a sequence of $n$ observations,
+indexed by $i$: $$\{x_i: 1, \dots, n \}.$$
 
 . . .
 
@@ -272,55 +273,3 @@ If $n = 2$, then $x_1^2 + x_2^2 \neq (x_1 + x_2)^2 = x_1^2 + 2x_1x_2 + x_2^2$.
 
 ---
 
-## Cartesian coordinate system
-
-Cartesian plane: 2-D plane defined by two perpendicular number lines:
-
-- x-axis (_horizontal_)
-- y-axis (_vertical_) 
-  
-. . .
-
-Using these axes, any point in the plane is described using an ordered pair of numbers $(x,y)$
-
----
-
-## Cartesian coordinate system
-
-A particular line on this plane takes the form
-$$
-\begin{aligned}
-y= a+ bx
-\end{aligned}
-$$
-where $a$ is known as the intercept and $b$ is the slope.
-
-Any incremental unit increase in $x$ results in $y$ increasing by $b$.
-
----
-
-## [Ex.]{.ex}
-
-```{R}
-#| label: "spurious"
-#| fig-align: center
-#| echo: FALSE
-#| fig-width: 16
-#| fig-height: 10
-
-cheese <- c(29.8,30.1,30.5,30.6,31.3,31.7,32.6,33.1,32.7,32.8)
-bed_ded <- c(327,456,509,497,596,573,661,741,809,717)
-
-df <- data.frame(cheese=cheese, 
-                 bed_ded=bed_ded)
-
-ggplot(df, aes(cheese, bed_ded)) +
-  geom_point(size = 4, color = "darkslategray") +
-  geom_smooth(method = "lm", se = FALSE, color = hii) +
-  xlab("Per Capita Cheese Consumption (lbs.)") +
-  ylab("Death by bedsheet tangling") + 
-  mytheme +
-  theme(
-    axis.text = element_text(size = 18)
-  )
-```
