--- a/slides/002-ols/_021-prologue.qmd
+++ b/slides/002-ols/_021-prologue.qmd
@@ -6,7 +6,8 @@ name: prologue
 
 ##
 
-_So far_ we've identified the fundamental problem econometricians face. [How do we proceed?]{.fragment} [**Regressions!**]{.fragment}
+_So far_ we've identified the fundamental problem econometricians face. 
+[How do we proceed?]{.fragment} [**Regressions!**]{.fragment}
 
 . . . 
 
